--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,8 +1,13 @@
 doctype 5
 html
   head
-    title Jenelle Arlyse
+    title Jenelle
+
     link(rel='stylesheet', type='text/css', href='/public/styles.css')
+    link(rel='stylesheet', type='text/css', href='//fonts.googleapis.com/css?family=Lato:400,700')
+    //- link(rel='stylesheet', type='text/css', href='//fonts.googleapis.com/css?family=Roboto+Slab:400,300,700')
+    link(rel='stylesheet', type='text/css', href='//fonts.googleapis.com/css?family=Codystar')
+
 
     block head
   body
